# plain-plugins

./: .gitignore  README.md
cmake/: CMakeLists.txt  install_manifest.txt  pf_plugin.pc
cmake/inc/: common.cmake  internal_utils.cmake  pf_plugin.pc.in
dependencies/lua/5.3.5/lua-5.3.5/src/: lua  luac
dependencies/lua/5.3.5/src/: lua  luac  mk_tags
dependencies/lua/5.4.2/src/: lauxlib.c  lauxlib.h  loadlib.c  lua
dependencies/lua/5.4.3/src/: lauxlib.c  lauxlib.h  loadlib.c  lua
game/: .vproject.json  READM.rd  mk_tags
game/include/pf/plugin/: game.h
game/include/pf/plugin/game/: config.h
game/include/pf/plugin/game/3rd/: cute_math.h
game/include/pf/plugin/game/ai/: config.h
game/include/pf/plugin/game/battle/: config.h  interface.h
game/include/pf/plugin/game/entity/: config.h  interface.h
game/include/pf/plugin/game/scene/: basic.h  config.h  interface.h  manager.h
game/src/battle/: interface.cc
game/src/entity/: interface.cc
game/src/scene/: interface.cc
lua/: .vproject.json  README.cn.md
lua/include/: config.h  export.h  filebridge.h  system.h
lua/include/pf/plugin/: lua.h
lua/include/pf/plugin/lua/: cache.h  config.h  export.h  file.h  filebridge.h  logger.h  lunar.h  net.h  system.h  tool.h
lua/proj.linux/: CMakeLists.txt
lua/src/: cache.cc  export.cc  file.cc  filebridge.cc  logger.cc  net.cc  system.cc  tool.cc
odbc/: pf_plugin_odbc.pproject
odbc/include/: config.h  export.h  interface.h  system.h
odbc/include/pf/plugin/: odbc.h
odbc/include/pf/plugin/odbc/: export.h  interface.h  system.h
odbc/proj.linux/: CMakeLists.txt
odbc/src/: export.cc  interface.cc  system.cc
protocol/: pf_plugin_protocol.pproject
protocol/include/pf/plugin/: protocol.h
protocol/include/pf/plugin/protocol/: basic.h  config.h  export.h  large_packet.h  logic_packet.h  normal_packet.h  tlbb.h
protocol/include/pf_plugin/: protocol.h
protocol/include/pf_plugin/protocol/: basic.h  config.h  large_packet.h  logic_packet.h  normal_packet.h
protocol/proj.linux/: CMakeLists.txt
protocol/src/: basic.cc  export.cc  tlbb.cc
